--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,7 @@
 [project]
-name = "sandbox"
+name = "socialmediaapi"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
-dependencies = [
-    "fastapi>=0.129.0",
-    "psycopg>=3.3.3",
-]
+dependencies = []
